# feature-characterization-for-profile-surface-texture

./: .gitignore  LICENSE  Minimal_example.m  README.md
FC_Functions/: feature_characterization.m  plot_motifs.m  watershed_segmentation.m
FC_Functions/+named_parameters/: Rmxc.m
Matlab/FC_Functions/: Rcm.p  Rz.p  feature_attribute.m  watershed_segmentation.m
Matlab/case_studies/: case_studies.mlx
Matlab/featurecharacterization2d/: feature_parameter.m
case studies/: case_studies.mlx
case studies/profile/: Bu_1_56_ak.mat  kuppen_taeler_4mm.mat  riefen_4mm.mat  simple_sin_1_open_peak.mat  sinus_04_sinus_04.mat  sinus_04_zeros_04.mat  zeros_kuppen_taeler.mat
data/profiles/: Luftpresser_1_56_ak.mat  README.md  tstRSm_random.mat
matlab/: FC.prj  GUI.mlapp  Minimal_example.m
matlab/GUI/for_testing/: readme.txt
matlab/case_studies/: case_studies.mlx
matlab/featurecharacterization2d/: Rcm.p  Rz.p  TH_for_optimal_periodicity.m  default_FC_parameters.m  feature_attribute.m  feature_characterization.m  feature_parameter.m  plot_motifs.m  watershed_segmentation.m
matlab/softgauge/: Softgauge_feature_characterization.m  smd2mat.p
python/: .flake8  .pre-commit-config.yaml  minimal_example.py  pyproject.toml  requirements.txt
python/case_studies/: case_studies.ipynb
python/featurecharacterization2d/: Rcm.py  Rcmwin.pyd  Rz.py  Rzwin.pyd  __init__.py  attribute.py  characterization.py  motif.py  parameter.py  plot.py  test_HDl.py  watershed.py
python/test/: test_parameter.py  test_rparams.py  test_watershed.py
(+3 files in other folders)
